# rit

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
src/rit/: __init__.py  __main__.py  app.py  cli.py  rit.tcss
src/rit/core/: __init__.py  datetime_utils.py  diff.py  highlight_theme.py  highlighting.py  pagination.py  syntax.py.old  types.py
src/rit/services/: __init__.py  gh_cli.py  gh_paginated_json.py  gh_request.py  github.py  github_repo.py  graphql_mutations.py  pr_discussion.py  pr_file_pagination.py  pr_file_request.py  pr_file_view_states.py  pr_graphql_queries.py  pr_graphql_response.py  pr_issue_comment_request.py  pr_raw_diff.py  pr_review_comment_selection.py  pr_review_comment_threads.py  pr_review_graphql.py  pr_review_payload.py  pr_review_request.py  pr_reviewer_request.py
src/rit/state/: __init__.py  discussion_projection.py  discussion_signature.py  file_collection.py  file_content.py  file_ingest.py  file_projection.py  file_workspace.py  issue_comments.py  models.py  pending_review.py  pr_management.py  (+8 more)
tests/: __init__.py  conftest.py  test_app.py  test_architecture_boundaries.py  test_branch_picker.py  test_collapsible_markdown.py  test_combined_diff.py  test_comment_card.py  test_comment_editor.py  test_core_root_module_exports.py  test_diff.py  test_diff_comments.py  test_diff_cursor_content.py  test_diff_cursor_side.py  test_diff_cursor_update.py  test_diff_full_file_preview.py  test_diff_geometry.py  test_diff_header.py  test_diff_highlight.py  test_diff_layout.py  test_diff_location.py  test_diff_medium_module_exports.py  test_diff_plan.py  test_diff_prefix.py  test_diff_search.py  test_diff_search_bar.py  test_diff_search_commands.py  test_diff_search_display.py  test_diff_search_match_index.py  test_diff_search_matching.py  test_diff_search_module_exports.py  test_diff_search_navigation.py  test_diff_search_policy.py  test_diff_search_public_api.py  test_diff_search_types.py  test_diff_selection.py  test_diff_selection_content.py  test_diff_selection_range.py  test_diff_selection_text.py  test_diff_styles.py  (+91 more)
(+69 files in other folders)
