[project]
name = "rit"
version = "0.1.0"
description = "Terminal GitHub PR Review CLI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "click>=8.3.1",
  "gitpython>=3.1.46",
  "pydantic",
  "pyperclip>=1.9.0",
  "rich>=14.3.1",
  "textual>=8.2.5",
  "unidiff>=0.7.5",
]

[project.scripts]
rit = "rit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rit"]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "textual-dev>=1.8.0",
  "ty>=0.0.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
