[project]
name = "rit"
version = "0.1.0"
description = "Terminal GitHub PR Review CLI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "click>=8.4.1",
  "gitpython>=3.1.50",
  "pillow>=12.2.0",
  "pydantic>=2.13.4",
  "pyperclip>=1.11.0",
  "rich>=15.0.0",
  "textual>=8.2.7",
  "textual-image[textual]>=0.12.0",
  "unidiff>=0.7.5",
]

[project.scripts]
rit = "rit.cli:main"

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rit"]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.4.0",
  "textual-dev>=1.8.0",
  "ty>=0.0.40",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"

include = ["src/rit", "tests"]
exclude = ["**/__pycache__/**", "**/site-packages/**"]

venvPath = "."
venv = ".venv"

defineConstant = { DEBUG = true }

reportMissingImports = "error"
reportMissingTypeStubs = false
reportGeneralTypeIssues = "warning"
reportAttributeAccessIssue = "warning"
